# scripties

./: README.md  download_dfpt_vasp_outputs.py  pyproject.toml  setup.py
scripts/: 24.09.24.per_frequency_diagonalized.py  analyse.py  analyse_efg_scaling.py  count_mace_params.py  eval_mace.py  get_eta_Qc.py  plot_plots.py  primitive.get_dielectric.py
src/util/: born.py  efg.py  jarvis.py  phonopy.py
src/util/data/: prim_to_conventional_permutation_mx.npy  schubert_paper.table_I.csv  schubert_paper.table_II.csv  schubert_paper.table_IV.csv
src/util/ga2o3/: geometry.py
src/util/plot/: __init__.py  moo3.py
tests/: test_geometry.py  test_lorentz_solver.py
tests/assests/: sd_1238510.primitive_cell.minkowski_reduced.xyz  sd_1238510.xyz
tests/assets/: sd_1238510.primitive_cell.minkowski_reduced.xyz
util/: __init__.py  aims.py  align.py  born.py  efg.py  geometry.py  jarvis.py  material_specific_data.py  outdated_permittivity.py  permittivity.py  phonopy.py  visualise.py
util/data/: prim_array_to_conventional_array_permutation.npy
util/plot/: __init__.py  eps.py  ga2o3.py  moo3.py
