[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "util"
version = "0.1.0"
description = "My daily helper functions"
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "numpy",
  "matplotlib",
  "pytest",
  "pandas",
  "ipython",
  "pynvim",
  "tqdm",
  "pynvim",
  "black",
  "pylint",
  "adjustText",
  "pypdf",
  "scipy",
  "ase==3.23",
  "wfl",
  "jedi",
]

[tool.setuptools.packages.find]
where=["src"]
